Fix bug 24850: remove the z-index define of rad window.
git-svn-id: https://dotnetnuke.svn.codeplex.com/svn@71188 142e9c35-602f-4880-9f37-ec48a24daa6a

--- a/Trunk/Content/website/Portals/_default/admin.css
+++ b/Trunk/Content/website/Portals/_default/admin.css
@@ -175,6 +175,3 @@ body > form > .rcbSlide { z-index:6000!important;}
 /* Set Z-index of Telerik Tree context menu */
 body > form > .RadMenu_Context { z-index: 1000 !important;} 
 
-/* Set Z-index of Telerik popup window  */
-body > form > .RadWindow { z-index: 3002 !important;} 
-
